added select2 to the treatment type and focus it on a newly added one

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,8 +2,8 @@
     position: fixed;
 }
 
-.form-control {
+/*.form-control {
     border-width: 0;
     box-shadow: none;
     border-radius: 0;
-}
+}*/
