--- a/css/custom.css
+++ b/css/custom.css
@@ -7,3 +7,53 @@
     box-shadow: none;
     border-radius: 0;
 }*/
+
+.treatment:before {
+    display: block;
+    content: ' ';
+    width: 100%;
+    height: 5px;
+    background-color: #e1ee7e;
+    margin-bottom: 2px;
+}
+
+.treatment .panel {
+    border: 0;
+    border-radius: 0;
+}
+
+.treatment .panel-heading {
+    background-image: none;
+    background-color: #e6e6e6;
+    padding-top: 1px;
+    padding-bottom: 0;
+    font-weight: bold;
+}
+
+.treatment .panel-heading .btn {
+    font-weight: bold;
+    text-shadow: none;
+}
+
+.treatment .btn-default {
+    background: 0;
+    box-shadow: none;
+    display: block;
+    border-color: #ddd;
+}
+
+.treatment .list-group-item {
+    border: 0;
+}
+
+.treatment .list-group {
+    box-shadow: none;
+}
+
+.treatment .form-control {
+    border-color: #efefef;
+}
+
+.icon-dropdown {
+    display: inline-block;
+}
