--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -1,8 +1,10 @@
 <li class="list-group-item">
     <div class="row">
         <div class="col-xs-4 col-sm-3 col-md-2">
-
-            <treatment-type entry="entry"></treatment-type>
+            <div class="form-group">
+                <span>{{entry.type.name}}</span>
+            </div>
+            <!--<treatment-type entry="entry"></treatment-type>-->
         </div>
         <div class="col-xs-8 col-sm-9 col-md-10">
             <form name="entryform">
