added sorting for the treatments, added secondary treatments, made addEntry work again, correctly this time. Also some refactoring

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,6 +17,11 @@
     margin-bottom: 2px;
 }
 
+.treatment.secondary:before {
+    margin-left: 25%;
+    width: 75%;
+}
+
 .treatment .panel {
     border: 0;
     border-radius: 0;
