--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -1,42 +1,55 @@
 <div class="col-xs-12 treatment" ng-class="!treatment.isMainTreatment ? 'secondary' : ''">
     <div class="panel" ng-class="treatment.type=='success' ? 'panel-success' : 'panel-default'">
-        <div class="panel-heading">
-            <h4 class="row">
-                <div class="col-xs-3" ng-show="treatment.isMainTreatment" dropdown>
-                    <a class="btn btn-default dropdown-toggle" dropdown-toggle id="dropdown-{{$index}}">{{treatment.date
-                        | date:'EEE dd.MM.yyyy HH:mm'}}</a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-{{index}}">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="">Behandlung einstellen</a>
-                        </li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="dc.deleteTreatment(treatment, treatments)">Behandlung löschen</a>
-                        </li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="">Behandlung schliessen</a>
-                        </li>
-                        <li role="presentation" class="divider"></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="dc.addTreatment(treatment, true, true, treatments)">Neue Behandlung</a>
-                        </li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="dc.copyTreatment(treatment, treatments)">Neue
-                            Behandlung (Kopie)</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="dc.addTreatment(treatment, true, false, treatments)">Neue
-                            Nebenbehandlung</a></li>
-                        <li role="presentation" class="divider"></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="dc.addTreatment(treatment, false, true, treatments)">Neue Nichtmandanten-Behandlung</a>
-                        </li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                   ng-click="dc.addTreatment(treatment, false, false, treatments)">Neue Nichtmandanten-Nebenbehandlung</a>
-                        </li>
-                    </ul>
+        <div class="panel-heading clearfix">
+            <div class="row">
+                <div class="col-xs-3">
+                    <div class="dropdown icon-dropdown" dropdown>
+                        <a class="btn btn-default btn-icon dropdown-toggle" dropdown-toggle id="dropdown-{{$index}}">
+                            <i class="fa fa-cog"></i>
+                        </a>
+                        <span class="heading-label" ng-show="treatment.isMainTreatment ">{{treatment.date | date:'EEE dd.MM.yyyy HH:mm'}}</span>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-{{index}}">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="">Behandlung einstellen</a>
+                            </li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="dc.deleteTreatment(treatment, treatments)">Behandlung
+                                löschen</a>
+                            </li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="">Behandlung schliessen</a>
+                            </li>
+                            <li role="presentation" class="divider"></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="dc.addTreatment(treatment, true, true, treatments)">Neue
+                                Behandlung</a>
+                            </li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="dc.copyTreatment(treatment, treatments)">Neue
+                                Behandlung (Kopie)</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="dc.addTreatment(treatment, true, false, treatments)">Neue
+                                Nebenbehandlung</a></li>
+                            <li role="presentation" class="divider"></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="dc.addTreatment(treatment, false, true, treatments)">Neue
+                                Nichtmandanten-Behandlung</a>
+                            </li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href
+                                                       ng-click="dc.addTreatment(treatment, false, false, treatments)">Neue
+                                Nichtmandanten-Nebenbehandlung</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-xs-1" ng-class="!treatment.isMainTreatment ? 'col-xs-offset-3' : ''">
-                    <a class="btn btn-default dropdown-toggle">{{treatment.user}}</a>
+
+
+                <div class="col-xs-1">
+                    <span class="heading-label treatment-user">{{treatment.user}}</span>
                 </div>
+
+
+
                 <div class="col-xs-2">
                     <a class="btn btn-default dropdown-toggle">&nbsp;</a>
                 </div>
@@ -110,24 +123,29 @@
                         </div>
                     </div>
                 </div>
-            </h4>
+            </div>
         </div>
         <div class="panel-body">
             <!--<div class="btn-group margin-bottom-10">-->
-                <!--<a class="btn btn-default" ng-click="addAttribute(treatment, 'first')">+</a>-->
+            <!--<a class="btn btn-default" ng-click="addAttribute(treatment, 'first')">+</a>-->
             <!--</div>-->
             <ul class="list-group">
                 <treatment-entry entry="entry" ng-repeat="entry in treatment.entries | orderBy:'type.name'">
                 </treatment-entry>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-9 col-xs-offset-3">
+                            <select2 class="form-control"
+                                     ng-change="dc.addEntry(treatment.id, dc.newEntry.type, treatment.entries)"
+                                     ng-model="dc.newEntry.type"
+                                     ng-options="type as type.name for type in dc.types track by type.id"></select2>
+                        </div>
+                    </div>
+                </li>
             </ul>
-            <div class="row">
-                <div class="col-xs-12">
-                    <select2 class="form-control" ng-change="dc.addEntry(treatment.id, dc.newEntry.type, treatment.entries)" ng-model="dc.newEntry.type"
-                             ng-options="type as type.name for type in dc.types track by type.id"></select2>
-                </div>
-            </div>
+
             <!--<div class="btn-group">-->
-                <!--<a class="btn btn-default" ng-click="addAttribute(treatment)">+</a>-->
+            <!--<a class="btn btn-default" ng-click="addAttribute(treatment)">+</a>-->
             <!--</div>-->
         </div>
     </div>
