--- a/css/custom.css
+++ b/css/custom.css
@@ -77,6 +77,11 @@
 
 .treatment .list-group-item {
     border: 0;
+    padding: 5px 15px;
+}
+
+.treatment .form-group {
+    margin-bottom: 7px;
 }
 
 .treatment .list-group {
