added one location change

--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -10,7 +10,7 @@
                         <span class="heading-label" ng-show="treatment.isMainTreatment ">{{treatment.date | date:'EEE dd.MM.yyyy HH:mm'}}</span>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-{{index}}">
                             <li role="presentation"><a role="menuitem" tabindex="-1" href
-                                                       ng-click="">Behandlung einstellen</a>
+                                                       href="/set/treatment">Behandlung einstellen</a>
                             </li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href
                                                        ng-click="dc.deleteTreatment(treatment, treatments)">Behandlung
