--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -80,9 +80,9 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Medikamente</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a href>Abgeben</a></li>
-                                <li><a href>Rezept</a></li>
-                                <li><a href>Fremd</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/drug/given/">Abgeben</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/drug/prescription/">Rezept</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/drug/foreign/">Fremd</a></li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a href="http://localhost/goto/drug/">Gehe zu Medi-Listen</a></li>
                             </ul>
@@ -106,9 +106,9 @@
                                 <li role="presentation" class="divider"></li>
                                 <li><a href>25.03.15 123</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a href>Neuer Brief an</a></li>
-                                <li><a href>Neuer Brief von</a></li>
-                                <li><a href>Neues Dokument</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/document/letterto/">Neuer Brief an</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/document/letterfrom/">Neuer Brief von</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/document/document/">Neues Dokument</a></li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a href="http://localhost/goto/document/">Gehe zu Briefe & Dokumente</a></li>
                             </ul>
@@ -120,7 +120,7 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Arbeitsunfähigkeit</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a href>Neue Arbeitsunfähigkeit</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/disability/">Neue Arbeitsunfähigkeit</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown>
@@ -130,7 +130,7 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Biomertrische Daten</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a href>Neue Biometrische Daten</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/biometric/">Neue Biometrische Daten</a></li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a href="http://localhost/goto/biometric/">Gehe zu Biometrische Daten</a></li>
                             </ul>
@@ -142,7 +142,12 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Leistungen</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a href>Neue Leistung</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/service/treatment/">Neue Leistungen zu Behandlung</a></li>
+                                <li><a href="http://localhost/treatment/{{treatment.id}}/service/generic/">Neue Leistungen</a></li>
+
+                                <!-- TODO show 2 Menus above if Treatment is NOT billed, show following Menu if Treatment is billed -->
+                                <li><a href="http://localhost/show/service/{{treatment.id}}/">Leistungen zeigen</a></li>
+
                                 <li role="presentation" class="divider"></li>
                                 <li><a href="http://localhost/goto/invoice/">Gehe zu Leistungen</a></li>
                             </ul>
