--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,19 @@
+#loading-overlay {
+    position: fixed;
+    width: 100%;
+    height:100%;
+    display: flex;
+    align-items: center;
+    top: 0;
+    z-index: 9998;
+    display: none;
+    background-color: rgba(255,255,255,0.5);
+}
+.loading-icon {
+    display: flex;
+    margin: 0 auto;
+}
+
 .position-fixed {
     position: fixed;
 }
